--- a/core/static/templates/studentfee/create.html
+++ b/core/static/templates/studentfee/create.html
@@ -38,6 +38,9 @@
                                 {{ form.semester|as_crispy_field }}
                             </div>
                             <div class="col-sm-3  ">
+                                {{ form.session|as_crispy_field }}
+                            </div>
+                            <div class="col-sm-3  ">
                                 {{ form.batch|as_crispy_field }}
                             </div>
                             <div class="col-sm-3  ">
