--- a/HallManagementApp/templates/student/index.html
+++ b/HallManagementApp/templates/student/index.html
@@ -1,6 +1,6 @@
 {% extends 'core/base/base.html' %}
 
-{% block title %}Student Fee List{% endblock %}
+{% block title %}Student List{% endblock %}
 
 {% block site_css %}{% endblock %}
 
@@ -47,7 +47,7 @@
                         <div class="col-sm-3  ">
                             {{ form.registration_number|as_crispy_field }}
                         </div>
-                        <div class="col-sm-3 ms-auto my-auto">
+                        <div class="col-sm-3 ms-auto mt-auto mb-3">
                             <input class="btn btn-sm btn-primary" type="submit" id="searchBtn" value="Show" />
                         </div>
                     </div>
