--- a/core/static/templates/core/profile.html
+++ b/core/static/templates/core/profile.html
@@ -13,9 +13,9 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="row gx-4 gx-lg-5 mb-3">
-            <div class="col-md-2 border-end">
+            <div class="col-md-3 border-end">
                 <div class="d-flex flex-column align-items-center text-center mb-5">
-                    <img src="{% static 'core\images\profile.jpg' %}" class="rounded-circle mt-sm-5" width="115px" />
+                    <img src="{% static 'core\images\user.png' %}" class="rounded-circle mt-sm-5" width="115px" />
                     <span class="fw-bold alert alert-warning my-2 p-2">{{userinfo.fullName}}</span>
                     <span class="text-black-50 small fw-bold">{{user.email}}</span>
                     <span class="text-black-50 small fw-bold" style="font-size: 11px;">Entry Date: {{userinfo.entryDate}}</span>
@@ -86,7 +86,7 @@
                 </div>
                 </form>
             </div>
-            <div class="col-md-4">
+            {% comment %} <div class="col-md-4">
                 <div class="">
                     <div class="d-flex justify-content-between align-items-center">
                         <h4 class="text-right">Addresses</h4>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> {% endcomment %}
         </div>
     </div>
 </section>
