--- a/core/static/templates/studentfee/create.html
+++ b/core/static/templates/studentfee/create.html
@@ -46,7 +46,7 @@
                             <div class="col-sm-3  ">
                                 {{ form.registration_number|as_crispy_field }}
                             </div>
-                            <div class="col-sm-3 ms-auto mt-auto">
+                            <div class="col-sm-3 ms-auto mt-auto mb-3">
                                 <input class="btn btn-sm btn-success" type="submit" id="searchBtn" value="Generate Fee" />
                             </div>
                         </div>
