--- a/core/static/templates/home/index.html
+++ b/core/static/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends 'core/base/base.html' %}
 
 
-{% block title %}Home{% endblock %}
+{% block title %}SEC{% endblock %}
 
 
 {% block site_css %}{% endblock %}
@@ -17,7 +17,7 @@
             <div class="text-center text-white" style=""font-family: '"Source Sans Pro",HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;'>
                 <!-- <h1 class='display-4 fw-bolder'>Point Of Sale System</h1> -->
                 <!-- <p class='lead fs-4 fw-normal mb-0'>Largest online books & stationary items store</p> -->
-                <h1 class="display-4 fw-bolder">Hall Management System</h1>
+                <h1 class="display-4 fw-bolder">SEC | Hall Management System</h1>
                 <p class="lead fs-4 fw-normal mb-0"></p>
             </div>
         </div>
