--- a/core/static/templates/core/base/base.html
+++ b/core/static/templates/core/base/base.html
@@ -78,7 +78,7 @@
                             font-weight: 800!important;
                         }
                     </style>
-                    {% if request.user|has_group:"Hall Provost" %}
+                    {% if request.user|has_group:"Hall Provost" or request.user|has_group:"Admin" %}
                     <div class="accordion-item">
                         <h2 class="accordion-header " id="flush-headingOne">
                             <button class="accordion-button fw-semibold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -120,7 +120,7 @@
                     </div>
                     {% endif %}
 
-                    {% if request.user|has_group:"Hall Provost" or request.user|has_group:"Student" %}
+                    {% if request.user|has_group:"Hall Provost" or request.user|has_group:"Admin" or request.user|has_group:"Student" %}
                     {% comment %} <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingTwo">
                             <button class="accordion-button fw-semibold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
@@ -144,7 +144,7 @@
                     {% endif %}
 
                     
-                    {% if request.user|has_group:"Hall Provost" or request.user|has_group:"Operator"  %}
+                    {% if request.user|has_group:"Hall Provost" or request.user|has_group:"Admin" or request.user|has_group:"Operator"  %}
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingThree">
                             <button class="accordion-button fw-semibold collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
