Admission button added

--- a/core/static/templates/core/base/base.html
+++ b/core/static/templates/core/base/base.html
@@ -249,6 +249,7 @@
                                     </li>
                                 {% else %}
                                     <div class="d-flex justify-content-center ">
+                                        <a class="btn btn-warning mx-1" href="{% url 'application_create' %}">Admission</a>
                                         <a class="btn btn-success mx-1" href="{% url 'login' %}">Log In</a>
                                     </div>
                                 {% endif %}
