--- a/core/static/templates/dormitoryApplications/dormitoryform.html
+++ b/core/static/templates/dormitoryApplications/dormitoryform.html
@@ -17,9 +17,24 @@
                     <div class="card-header">
                         <h3 class="card-title text-center m-0">Dormitory Application Form</h3>
                     </div>
-                    {% if message != "" %}
-                        <div class="alert alert-success p-2 mx-3 mt-3 mb-1"><b>{{ message }}</b></div>
+                    {% comment %} {% if message != "" %}
+                        <div class=""><b>{{ message }}</b></div>
+                    {% endif %} {% endcomment %}
+                    
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.tags == "success" %}
+                                <div class="alert alert-success px-3 py-2 mx-3 mt-3 mb-1">
+                                    <i class="fas fa-check-circle"></i> <strong>Success:</strong> {{ message }}
+                                </div>
+                            {% else %}
+                                <div class="alert alert-warning px-3 py-2 mx-3 mt-3 mb-1">
+                                    <i class="fas fa-exclamation-triangle"></i> <b>Error:</b> {{ message }}
+                                </div>
+                            {% endif %}
+                        {% endfor %}
                     {% endif %}
+
                     <div class="card-body">
                         <form method="POST" enctype="multipart/form-data" class="row gx-4 px-2 was-validated" novalidate>
                             {% csrf_token %}
