--- a/core/static/templates/accounts/index.html
+++ b/core/static/templates/accounts/index.html
@@ -54,7 +54,7 @@
                                 <td>{{user.groups}}</td>
 								<td class="text-center">
 									<a class="btn btn-sm btn-info" href="{% url 'edituser' user.user.id %}">Edit</a>
-									<form method="POST" class="d-inline" onsubmit="return confirm('Are you sure you want to delete the user?');" action="{% url 'deleteuser' %}">
+									<form method="POST" class="d-inline" onsubmit="return confirm('Are you sure you want to delete the user?');" action="{% url 'deleteuser' user.user.id %}">
 										{%csrf_token%}
 										<input type="decimal" value="{{user.user.id}}" name="userid" style="display:none;"/>
 										<button class="btn btn-sm btn-danger" type="submit" >Delete</button>
