--- a/core/static/templates/student/index.html
+++ b/core/static/templates/student/index.html
@@ -41,9 +41,9 @@
                         <div class="col-sm-3  ">
                             {{ form.batch|as_crispy_field }}
                         </div>
-                        <div class="col-sm-3  ">
+                        <!-- <div class="col-sm-3  ">
                             {{ form.semester|as_crispy_field }}
-                        </div>
+                        </div> -->
                         <div class="col-sm-3  ">
                             {{ form.registration_number|as_crispy_field }}
                         </div>
