--- a/core/static/templates/accounts/index.html
+++ b/core/static/templates/accounts/index.html
@@ -1,85 +1,107 @@
 {% extends 'core/base/base.html' %}
 
-
 {% block title %}User List{% endblock %}
-
 
 {% block site_css %}{% endblock %}
 
-
 {% block body %}
+{% load crispy_forms_tags %}
 
-    <section class="py-4 px-4">
-		<div class="row">
-			<div class="container col-sm-10">
-                <div class="pb-2 d-flex justify-content-center align-items-center border-bottom border-secondary border-2">
-					<h3 class="m-0 mx-2">User List</h3>                    
-				</div>
+<section class="py-4 px-4">
+    <div class="row">
+        <div class="container col-sm-12">
+            <div class="pb-2 d-flex justify-content-center align-items-center border-bottom border-secondary border-2">
+                <h3 class="m-0 mx-2">User List</h3>
+            </div>
 
-				<div class="mt-3">
-					<a class="btn btn-sm btn-primary" href="{% url 'register' %}">Create User</a>
-				</div>
+            <div class="mt-3">
+                <a class="btn btn-sm btn-primary" href="{% url 'register' %}">Create User</a>
+            </div>
 
-                {% if messages %}
-                    {% for message in messages %}
-						{% if message.tags == "success" %}
-							<div class="alert alert-success p-2 mx-3 mt-3 mb-1"><b>{{ message }}</b></div>
-						{% else %}
-							<div class="alert alert-danger p-2 mx-3 mt-3 mb-1"><b>{{ message }}</b></div>
-						{% endif %}
-                    {% endfor %}
-                {% endif %}
-				
-                <div class="mt-3">
-                    <table class="table table-bordered table-hover text-center">
-                        <thead class="table-light">
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Name</th>
-                                <th scope="col">Username</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">IsActive</th>
-                                <th scope="col">Group</th>
-                                <th scope="col" class="text-center" style="width:150px;">Action</th>
-                              </tr>
-                        </thead>
-                        <tbody>
-                          {% for user in users %}
-                            <tr>
-                                <th scope="row">{{forloop.counter}}</th>
-                                <td>{{user.user.first_name}} {{user.user.last_name}}</td>
-                                <td>{{user.user.username}}</td>
-                                <td>{{user.user.email}}</td>
-                                <td>{{user.user.is_active}}</td>
-                                <td>{{user.groups}}</td>
-								<td class="text-center">
-									<a class="btn btn-sm btn-info" href="{% url 'edituser' user.user.id %}">Edit</a>
-									<form method="POST" class="d-inline" onsubmit="return confirm('Are you sure you want to delete the user?');" action="{% url 'deleteuser' user.user.id %}">
-										{%csrf_token%}
-										<input type="decimal" value="{{user.user.id}}" name="userid" style="display:none;"/>
-										<button class="btn btn-sm btn-danger" type="submit" >Delete</button>
-									</form>
-								</td>	
-                            </tr>
-                          {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == "success" %}
+                        <div class="alert alert-success p-2 mx-3 mt-3 mb-1"><b>{{ message }}</b></div>
+                    {% else %}
+                        <div class="alert alert-danger p-2 mx-3 mt-3 mb-1"><b>{{ message }}</b></div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
 
-                <div class="">
-                    <div class="col-md-12 text-left pt-2">
-                        <a class="btn btn-success btn-sm" href="/home/">Back To Home</a>
+            <div class="alert alert-primary mt-3">
+                <form id="UserForm" method="GET" action="" class="">
+                    {% csrf_token %}
+                    <div class="row gx-3">
+                        <div class="col-sm-4">
+                            {{ form.username|as_crispy_field }}
+                        </div>
+                        <div class="col-sm-4">
+                            {{ form.email|as_crispy_field }}
+                        </div>
+                        <div class="col-sm-3">
+                            {{ form.group|as_crispy_field }}
+                        </div>
+                        <div class="col-sm-4">
+                            {{ form.is_active|as_crispy_field }}
+                        </div>
+                        <div class="col-sm-3 ms-auto mt-auto mb-3">
+                            <input class="btn btn-sm btn-primary" type="submit" id="searchBtn" value="Show" />
+                        </div>
                     </div>
-				</div>
-			</div>
-		</div>
-	</section>
+                </form>
+            </div>
 
+            {% if users %}
+            <div class="mt-3">
+                <table class="table table-bordered table-hover text-center">
+                    <thead class="table-light">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Username</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">IsActive</th>
+                            <th scope="col">Group</th>
+                            <th scope="col" class="text-center" style="width:150px;">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for user in users %}
+                        <tr>
+                            <th scope="row">{{ forloop.counter }}</th>
+                            <td>{{ user.first_name }} {{ user.user.last_name }}</td>
+                            <td>{{ user.username }}</td>
+                            <td>{{ user.email }}</td>
+                            <td>{{ user.is_active|yesno:"Yes,No" }}</td>
+                            <td>{{ user.groups.all|join:", " }}</td>
+                            <td class="text-center">
+                                <a class="btn btn-sm btn-info" href="{% url 'edituser' user.id %}">Edit</a>
+                                <form method="POST" class="d-inline" onsubmit="return confirm('Are you sure you want to delete the user?');" action="{% url 'deleteuser' user.id %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" value="{{ user.user.id }}" name="userid" />
+                                    <button class="btn btn-sm btn-danger" type="submit">Delete</button>
+                                </form>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            {% endif %}
+            
+            <div class="">
+                <div class="col-md-12 text-left pt-2">
+                    <a class="btn btn-success btn-sm" href="/home/">Back To Home</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
 
 {% block site_js %}
 <script>
-
+    // Add any additional JavaScript if needed
 </script>
 {% endblock %}
