--- a/core/static/templates/home/index.html
+++ b/core/static/templates/home/index.html
@@ -9,19 +9,20 @@
 
 {% block body %}
 
-    <!-- Header-->
+
     <header class="masthead" style="position: relative; background-color: #343a40;
-    background: url(../static/core/images/homebg.jpeg) no-repeat center center; background-size: cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../static/core/images/homebg.jpeg) no-repeat center center; background-size: cover;
     padding-top: 5rem; padding-bottom: 5rem;">
         <div class="col-9 col-sm-6 px-4 py-3 px-lg-5 my-5 mx-auto" style="background-color: #00706bcf;">
-            <div class="text-center text-white" style=""font-family: '"Source Sans Pro",HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;'>
+            <div class="text-center text-white" style="font-family: 'Source Sans Pro',HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif;">
                 <!-- <h1 class='display-4 fw-bolder'>Point Of Sale System</h1> -->
                 <!-- <p class='lead fs-4 fw-normal mb-0'>Largest online books & stationary items store</p> -->
                 <h1 class="display-4 fw-bolder">SEC | Hall Management System</h1>
                 <p class="lead fs-4 fw-normal mb-0"></p>
             </div>
         </div>
-    </header>
+</header>
+
 
     <!-- <main>
         <section id="feedback" class="feedback text-white">
