--- a/core/static/templates/accounts/login.html
+++ b/core/static/templates/accounts/login.html
@@ -44,6 +44,13 @@
                             {% endcomment %} 
                         </div>
                     </form>
+
+                    <!-- Add Forgot Password Button -->
+                    <div class="text-center pt-2">
+                        <a href="{% url 'password_reset' %}" class="text-decoration-none">
+                            <button class="btn btn-link">Forgot Password?</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
