--- a/core/static/templates/core/profile.html
+++ b/core/static/templates/core/profile.html
@@ -6,12 +6,13 @@
 
 {% block site_css %}{% endblock %}
 
-{% load static %}
+<!-- {% load static %} -->
 
 {% block body %}
+{% load crispy_forms_tags %}
 
 <section class="py-5">
-    <div class="container px-4 px-lg-5 my-5">
+    <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 mb-3">
             <div class="col-md-3 border-end">
                 <div class="col-md-3 offset-md-4 border-end">
@@ -38,142 +39,72 @@
             </div>
             <div class="col-md-6 border-end">
                 <form class="" action="." method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <h4 class="text-right">Profile Settings</h4>
-                    </div>
-                    <hr class="m-0 mb-3"/>
-                    <div class="row">
-                        <div class="form-group ">
-                            <label class="form-label" for="fullName" required><b>Name:</b></label>
-                            <input class="form-control" type="text" name="fullName" maxlength="200" required="" id="fullName" value="{{userinfo.fullName}}">
+                    {% csrf_token %}
+                    <div class="">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h4 class="text-right">Profile Settings</h4>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 py-2">
-                            <div class="form-group">
-                                <label class="form-label" for="birthdate"><b>Birthdate:</b></label>
-                                <input class="form-control" type="date" name="birthdate" required="" id="birthdate" value="{{birthdate}}">
-                            </div>
-                        </div>
-                        <div class="col-sm-6 py-2">
-                            <div class="form-group">
-                                <label class="form-label" for="gender"><b>Gender:</b></label>
-                                <select class="form-select" name="gender" id="gender" required>
-                                    {% if userinfo.gender == 'M' %}
-                                        <option value="M" selected>Male</option>
-                                        <option value="F" >Female</option>
-                                    {% elif userinfo.gender == 'F' %}
-                                        <option value="M" >Male</option>
-                                        <option value="F" selected>Female</option>
-                                    {% else %}
-                                        <option value="M" >Male</option>
-                                        <option value="F" >Female</option>
-                                    {% endif %}
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 py-2">
-                            <div class="form-group">
-                                <label class="form-label" for="email" required><b>Email:</b></label>
-                                <div class="input-group ">
-                                    <input class="form-control" type="email" name="email" id="email" value="{{userinfo.email}}">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 py-2">
-                            <div class="form-group">
-                                <label class="form-label" for="phone" required><b>Phone:</b></label>
-                                <div class="input-group ">
-                                    <span class="input-group-text" id="basic-addon1" style="font-weight: 500;">+88</span>
-                                    <input class="form-control" type="tel" pattern="[0-9]{11}" name="phone" id="phone" value="{{userinfo.phone}}">
-                                </div>
-                            </div>
-                        </div>
+                        <hr class="m-0 mb-3"/>
                         
-                        
-                        <div class="mt-3 text-center">
+                        <!-- Display Form Errors -->
+                        {% if messages %}
+                            {% for message in messages %}
+                                {% if message.tags == "success" %}
+                                    <div class="alert alert-success px-3 py-2 mt-2 mb-3">
+                                        <i class="fas fa-check-circle"></i> <strong>Success:</strong> {{ message }}
+                                    </div>
+                                {% else %}
+                                    <div class="alert alert-warning px-3 py-2 mt-2 mb-3">
+                                        <i class="fas fa-exclamation-triangle"></i> <b>Error:</b> {{ message }}
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+
+                        <div class="row">
+                            <!-- Full Name Field -->
+                            <div class="col-sm-12">
+                                {{ form.fullName|as_crispy_field }}
+                            </div>
+                
+                            <!-- Birthdate Field -->
+                            <div class="col-sm-6">
+                                {{ form.birthDate|as_crispy_field }}
+                            </div>
+                                                    
+                            <!-- Picture Field -->
+                            <div class="col-sm-6">
+                                <style>
+                                    /* Truncate text with ellipsis */
+                                    .input-group .flex-grow-1 {
+                                        display: block;               /* Ensures the element takes full available width */
+                                        max-width: 100%;              /* Prevents exceeding the parent container's width */
+                                        white-space: nowrap;         /* Prevents text from wrapping */
+                                        overflow: hidden;            /* Hides overflow text */
+                                        text-overflow: ellipsis;     /* Adds '...' when text overflows */
+                                    }
+                                </style>
+                                {{ form.picture|as_crispy_field }}
+                            </div>
+                
+                            <!-- Email Field (Disabled) -->
+                            <div class="col-sm-12">
+                                {{ form.email|as_crispy_field }}
+                            </div>
+                
+                            <!-- Phone Field -->
+                            <div class="col-sm-12">
+                                {{ form.phone|as_crispy_field }}
+                            </div>
+                        </div>
+                
+                        <!-- Submit Button -->
+                        <div class="mt-2 text-center">
                             <button class="btn btn-warning profile-button" type="submit">Save Profile</button>
                         </div>
                     </div>
-                </div>
                 </form>
             </div>
-            {% comment %} <div class="col-md-4">
-                <div class="">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <h4 class="text-right">Addresses</h4>
-                    </div>
-                    <hr class="m-0 mb-3"/>
-                    <div class="row flex-column align-items-center">
-                        {% with sl=1 %}
-                        {% for address in addresses %}
-                            <div class="d-flex rounded bg-light mb-3 p-2 col-sm-11 border">
-                                <div class="col-sm-10 text-cener d-flex flex-column border-end ps-3">
-                                    <span class="p-1 border-bottom"><b>{{ forloop.counter }}. {{ address.addressName }}</b></span>
-                                    <div class="col-sm-12 py-1 ps-1 font-monospace" style="font-size: 14px;">
-                                        <span class="">{{address}}</span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-2 d-flex justify-content-center">
-                                    <form action="{% url 'address_delete' address.id %}" method="post" class="d-flex" onsubmit="return confirm('Do you really want to delete the address?');">
-                                    {% csrf_token %}
-                                        <button type="submit" class="btn btn-danger btn-sm my-auto"><i class="bi bi-trash-fill"></i></button>
-                                    </form>
-                                </div>
-                            </div>
-                        {% endfor %}
-                        {% endwith %}
-                    </div>
-                    <div class="d-flex">
-                        <button type="button" class="btn btn-primary mx-auto" data-bs-toggle="modal" data-bs-target="#exampleModal">New Address</button>
-                    </div>
-                </div>
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <form class="" action="createaddress/" method="POST" enctype="multipart/form-data">
-                                {% csrf_token %}
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">New Address</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="row justify-content-center align-items-center">
-                                        <div class="form-group col-sm-6">
-                                            <label class="form-label" for="addressName"><b>Address Name:</b></label>
-                                            <input class="form-control" type="text" name="addressName" maxlength="200" required="" id="addressName">
-                                        </div>
-                                        <div class="form-group col-sm-6">
-                                            <label class="form-label" for="country"><b>Country:</b></label>
-                                            <input class="form-control" type="text" name="country" maxlength="200" required="" id="country">
-                                        </div>
-                                    </div>
-                                    <div class="row justify-content-center align-items-center py-2">
-                                        <div class="form-group col-sm-4">
-                                            <label class="form-label" for="city"><b>City:</b></label>
-                                            <input class="form-control" type="text" name="city" maxlength="200" required="" id="city">
-                                        </div>
-                                        <div class="form-group col-sm-4">
-                                            <label class="form-label" for="area"><b>Area:</b></label>
-                                            <input class="form-control" type="text" name="area" maxlength="200" required="" id="area">
-                                        </div>
-                                        <div class="form-group col-sm-4">
-                                            <label class="form-label" for="streetaddress"><b>Street:</b></label>
-                                            <input class="form-control" type="text" name="streetaddress" maxlength="200" required="" id="streetaddress">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="modal-footer justify-content-center">
-                                    <button type="submit" class="btn btn-success">Create</button>
-                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div> {% endcomment %}
         </div>
     </div>
 </section>
